[project]
name = "langchain-rpa-simkit"
version = "0.1.0"

# Your runtime dependencies
dependencies = [
  "langchain>=0.0.200",
  "langchain-sema4>=0.1.0",
  "rpaframework>=13.0.0",
]

# (Optional) Dev dependencies group
#[tool.uv.dependency-groups.dev]
#dependencies = [
#  "pytest>=7.0",
#  "ruff>=0.0.300",
#]

